workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__endpoint__test__can_handle_set_path_parameter_shape_command__new_events.snap
---
source: workspaces/optic-engine-native/src/commands/endpoint.rs
expression: new_events
---
[
    PathParameterShapeSet(
        PathParameterShapeSet {
            path_id: "path_2",
            shape_descriptor: ShapedRequestParameterShapeDescriptor {
                shape_id: "string_shape_1",
                is_removed: false,
            },
            event_context: None,
        },
    ),
]
