workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__endpoint__test__can_handle_set_path_parameter_shape_command__unexisting_path_result.snap
---
source: workspaces/optic-engine-native/src/commands/endpoint.rs
expression: unexisting_path_result.unwrap_err()
---
Validation(
    "Command failed validation: path component must exist to set path parameter shape, \"SetPathParameterShape(SetPathParameterShape { path_id: \\\"not-a-path\\\", shaped_request_parameter_shape_descriptor: ShapedRequestParameterShapeDescriptor { shape_id: \\\"string_shape_1\\\", is_removed: false } })\"",
)
